* Updated HTML Purifier library from 3.1.1 to 3.2.0 (vaughan)
* smarty values to make them use both $xoops_value and $icms_value. (stranger)
* Fixed issues in redirection in RTL mode. (stranger)
* Updated xoops_getcss to read rtl styles. (stranger)
* Method we use RTL. (stranger)
* Removed theme_rtl system at all. (stranger)
* Updated Snoopy from v1.2.3 to v1.2.4. (stranger)

'''Changed'''
* impresstheme is using $icms_values. (stranger)
* in installer config settings, changed some settings to use textsarea instead of textarea. as was causing problems with those fields if URI's were entered etc. (vaughan)

== Impresscms 1.1==

===2008-10-31 : 1.1 Final===

'''Fixed'''
* Issues with content menu in RTL. (stranger)
* Issues with registration not completed with passwordmeter. (stranger)
* Issues with too easy captcha configs. (stranger)
* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)
* Fixed issues with spambots. (Frederick/stranger)
* Fixed issues multiple time stamps. (stranger)
* Fixed security issue in snoopy.php: http://secunia.com/Advisories/32361/ (thanks to Gijoe)
* Fixed issue on the pagination links of the image manager tinyMCE plugin.
* The WYSIWYG group permission per module was confused when trying to know if a user should have permission to use WYSIWYG when posting a comment in a module that had such permission (malanciault/real_therplima)
* Fixed a bug with RTL, if this is not implemented, we will have troubles while sending posts in some modules like newbb (stranger)

'''Added'''
* Stop Spam Registration class and its experimental use in extra/anti-spam/register.php (stranger/malanciault)

''Improved'''
* It is now possible to specify in which modules Webmasters can use WYSIWYG editor (malanciault)