@@ -9,6 +9,19 @@ Legend :
   -  a constant was removed OR a whole file was removed
   #  Directory / Folders guide
 
+ImpressCMS 1.1.1 (changes from ImpressCMS 1.1)
+=========================================
+
+===================================================
+# Directory: modules/system/language/english/admin/
+===================================================
+
+modules/system/language/english/admin/preferences.php
+-----------------------------------------------------
+
++  define("_MD_AM_UNABLEENCCLOSED","Database Update Failed, You can't change password encryption whilst the site is closed");
+
+
 ImpressCMS 1.1 (changes from ImpressCMS 1.0)
 =========================================
 
